# fluentcms-forms-builder

./: .coveragerc  .gitignore  CHANGES.rst  MANIFEST.in  README.md  README.rst  runtests.py  setup.cfg  setup.py  tox.ini
example/: requirements.txt  settings.py  urls.py
example/templates/layouts/: default.html
fluentcms_forms_builder/: admin.py  content_plugins.py  forms.py  meta.py  models.py  tests.py
fluentcms_forms_builder/locale/ru/LC_MESSAGES/: django.mo  django.po
fluentcms_forms_builder/migrations/: 0001_initial.py  0002_auto_20160708_1024.py
fluentcms_forms_builder/templates/fluentcms_forms_builder/: form.html  form_sent.html
fluentcms_forms_builder/templates/fluentcms_forms_builder/includes/: built_form.html
fluentcms_forms_builder/tests/: test_all.py
